--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   provider: ^6.0.4
+  fancy_shimmer_image: ^2.0.2
+  google_fonts: ^3.0.1
   get: ^4.6.5
 
 dev_dependencies:
