--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.4
   fancy_shimmer_image: ^2.0.2
   google_fonts: ^3.0.1
+  shimmer: ^2.0.0
   get: ^4.6.5
 
 dev_dependencies:
