--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   google_fonts: ^3.0.1
   shimmer: ^2.0.0
+  card_swiper: ^2.0.4
   get: ^4.6.5
 
 dev_dependencies:
