added search page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shimmer: ^2.0.0
   card_swiper: ^2.0.4
   get: ^4.6.5
+  flutter_iconly: ^1.0.2
 
 dev_dependencies:
   flutter_test:
